feat: add base level rabbitmq integration
